<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluish"
            android:text="@string/stay_connected" />
        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxEms="20"
            android:textColor="@color/bluish"
            android:text="@string/signup_bdy" />
        <EditText
            android:id="@+id/et_Signup_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableStart="@drawable/person"
            android:padding="5dp"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/e_mail"/>
        <EditText
            android:id="@+id/etSignup_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableStart="@drawable/keyboard"
            android:padding="5dp"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/etConfirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/confirm_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:background="@drawable/btn_primary"/>
        <TextView
            android:id="@+id/signIn_btn_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textAlignment="center"
            android:text="@string/already_have_an_account_sign_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>